<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Status" Id="{f9e81996-f3f7-44bb-86b9-b0ae68aff6e9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Status :
(
	NotReady,
	Ready,
	Starting,
	Running,
	Stopping,
	Fault
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>