<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Modes" Id="{8bc1499c-d72b-4047-be06-7046324cc44f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Modes :
(
	Off,
	Auto,
	Manual
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>